Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.09.2022 08:11:24</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.09.2022 09:12:18</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pondělí, 12. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Polévka ze zeleného kari</strong>
+<strong>Hrachová s klobásou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec se žampionovou omáčkou a rýží NEBO těstovinou</strong>
+<strong>Hamburská hovězí pečeně s houskovým knedlíkem NEBO rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>Špagety s rajčatovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s kuřecím masem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							143,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: barbecue kuřecí stehynka, ryze, Okouník se slaninou a žampiony, pečeně brambory, zelenina</strong>
+<strong>TEPLÝ BUFET: pečeně brambory, rýže, zelenina, vepřové a kuřecí nudličky na slanině a žampionech, Tilapie s celerem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: rajčatový s paprikovým dresinkem, okurkový</strong>
+<strong>SALÁTY: míchaná zelenina, těstovinový s paprikou a tuňákem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -128,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou, citron {L} 155</li><li>Peceny filet z cerstve prazmy a morskeho vlka s ratatouille z pecene zeleniny, korenena ryze, salatek 179</li><li>Smazene psenicne nudle s veprovym masem, letni zeleninou, thajskou bazalkou a arasidy s krupavou cibulkou, korejsky mrkvovy salat s chilli {L} 155</li><li>Smazeny rizek z krutich prsou, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou, citron {L} 175</li><li>Indicky dal z cervene cocky s gaj coj, rajcaty a zelenym koriandrem, sazene vejce, bramborove placky, salatek {L} 155</li></ol>
+None
 </td>
 </tr>
 </table>
