Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.09.2022 11:17:43</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 12.09.2022 11:45:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -128,7 +128,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 155</li><li>Peceny filet z cerstve prazmy a africkeho sumecka s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem a zelenymi bylinkami, pikantni zelny salat 155</li><li>Spagety s nudlickami hoveziho rostence, zelenymi fazolkami, pesto rosso s bazalkou a zralou goudou {L} 179</li><li>Smazeny kvetak, bramborovy salat s cervenou repou, zelenou cibulkou, petrzelkou a majonezou {L} 155</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 155</li><li>Peceny filet z cerstve prazmy a africkeho sumecka s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem a zelenymi bylinkami, jasmínová rýže, pikantni zelny salat 155</li><li>Spagety s nudlickami hoveziho rostence, zelenymi fazolkami, pesto rosso s bazalkou a zralou goudou {L} 179</li><li>Smazeny kvetak, bramborovy salat s cervenou repou, zelenou cibulkou, petrzelkou a majonezou {L} 155</li></ol>
 </td>
 </tr>
 </table>
