Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.09.2022 08:09:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.09.2022 09:11:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,42 @@
 <h5>Úterý, 13. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Hrachová s klobásou</strong>
+<strong>Kapustová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hamburská hovězí pečeně s houskovým knedlíkem NEBO rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							147,-
-						</span>
-</p>
-<p>
-<strong>Špagety s rajčatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: pečeně brambory, rýže, zelenina, vepřové a kuřecí nudličky na slanině a žampionech, Tilapie s celerem</strong>
+<strong>Vepřová krkovička ,,garam masala” s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>Teplý kuřecí sendvič s hranolkami</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: Tilapie se slaninou a sušenými rajčaty, zelenina, ryze, pečený brambor, kuřecí prsa barbecue</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: míchaná zelenina, těstovinový s paprikou a tuňákem</strong>
+<strong>SALÁTY: bramborový s vepřovým masem a rajčaty, těstovinový s tuňákem a paprikovym dresinkem, Míchaný</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -52,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 13.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Makovec s citrónovou polevou</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Karamelový cheesecake</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou v menu  <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bazalkou samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Moravský vrabec, dušený špenát, bramborový knedlík, smažená cibulka <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Špenátové lasagne, kuřecí maso, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Pohankové rizoto s restovanými žampiony, pórkem, hráškem a parmazánem <em title="Mléko">7</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 155</li><li>Peceny filet z cerstve prazmy a africkeho sumecka s citronovo-koprovou jogurtovou omackou, pecene brambory, salatek 179</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem a zelenymi bylinkami, jasmínová rýže, pikantni zelny salat 155</li><li>Spagety s nudlickami hoveziho rostence, zelenymi fazolkami, pesto rosso s bazalkou a zralou goudou {L} 179</li><li>Smazeny kvetak, bramborovy salat s cervenou repou, zelenou cibulkou, petrzelkou a majonezou {L} 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 155</li><li>Peceny filet z cerstveho mecouna s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 179</li><li>Thajske hovezi massaman kari s ananasem, paprikami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 155</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {lapin ala moutarde}, pecene brambory, salatek 179</li><li>Lasagne s cuketami, paprikami, cervenou cockou a rajcaty s bazalkou, zapecene ve smetanove omacce s gorgonzollou, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
