Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.09.2022 09:11:50</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.09.2022 09:52:39</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -140,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 155</li><li>Peceny filet z cerstveho mecouna s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 179</li><li>Thajske hovezi massaman kari s ananasem, paprikami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 155</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {lapin ala moutarde}, pecene brambory, salatek 179</li><li>Lasagne s cuketami, paprikami, cervenou cockou a rajcaty s bazalkou, zapecene ve smetanove omacce s gorgonzollou, salatek {L} 155</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 155</li><li>Peceny filet z cerstveho mecouna s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 179</li><li>Thajske hovezi massaman kari s ananasem, paprikami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 155</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {lapin ala moutarde}, pecene brambory, salatek 179</li><li>Lasagne s cuketami, paprikami, rajcaty s bazalkou, zapecene ve smetanove omacce s gorgonzollou, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
