Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.09.2022 08:02:22</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.09.2022 09:09:23</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Středa 14.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Čokoládová quinoa  (bez lepku, bez laktózy) </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Květákový krém samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí teriyaki, jasmínová rýže, koriandr, arašídy <em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí supreme, omáčka z pečených paprik, bylinková tarhoňa <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>250g Halloumi wrap s pečenou zeleninou, rukolový salát, cherry rajčata <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -95,7 +140,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 155</li><li>Peceny filet z cerstveho mecouna s citronovym fenyklem s kaparami, smazena zeleninova ryze, salatek 179</li><li>Thajske hovezi massaman kari s ananasem, paprikami, kokosovym mlekem, arasidy a vonavym korenim, jasminova ryze 155</li><li>Peceny kralik na dijonske horcici, bilem vine a slanine po francouzsku {lapin ala moutarde}, pecene brambory, salatek 179</li><li>Lasagne s cuketami, paprikami, rajcaty s bazalkou, zapecene ve smetanove omacce s gorgonzollou, salatek {L} 155</li></ol>
+<ol><li>Peceny cerstvy jihocesky pstruh s okurkovym relisem s celozrnnou horcici, irsky colcannon {stouchane brambory s mladym zelim, porkem a smetanou}, salatek 155</li><li>Peceny filet z cerstveho norskeho lososa s okurkovym relisem s celozrnnou horcici, irsky colcannon, salatek 179</li><li>Burrito s mexickym veprovym chilli s palivymi paprikami a cervenou cibuli, bylinkovym jogurtovy dip, pecena dyne, salatek {L} 155</li><li>Srnci medailonky se svestkovou omackou, chlupate knedliky, zelny salatek {L} 185</li><li>Opekany tempeh ve sladkokysele omacce s paprikami, zazvorem a cervenou cibuli, jasminova ryze 155</li></ol>
 </td>
 </tr>
 </table>
