--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.09.2022 09:09:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.09.2022 09:50:07</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,31 +7,31 @@
 <h5>Středa, 14. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová</strong>
+<strong>Krémová houbová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
+<strong>Vepřová krkovice s liškovou omáčkou a pečeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							149,-
 						</span>
 </p>
 <p>
-<strong>Vepřová krkovička ,,garam masala” s rýží</strong>
+<strong>Čočka s párkem, vejcem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							147,-
+							141,-
 						</span>
 </p>
 <p>
-<strong>Teplý kuřecí sendvič s hranolkami</strong>
+<strong>Míchaný salát s restovanou slaninou, vejcem a pečeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							141,-
 						</span>
 </p>
 <p>
