Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.09.2022 08:43:10</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.09.2022 09:26:13</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Čtvrtek, 15. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Krémová houbová</strong>
+<strong>Tomatová s bylinkovým olejem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřová krkovice s liškovou omáčkou a pečeným bramborem</strong>
+<strong>Kuřecí roláda se špenátem a vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							149,-
+							147,-
 						</span>
 </p>
 <p>
-<strong>Čočka s párkem, vejcem a okurkou</strong>
+<strong>Zapečená cuketa s mletým masem a balkánským sýrem, bylinkový dip</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							141,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s restovanou slaninou, vejcem a pečeným bramborem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							141,-
-						</span>
-</p>
-<p>
-<strong>TEPLÝ BUFET: Tilapie se slaninou a sušenými rajčaty, zelenina, ryze, pečený brambor, kuřecí prsa barbecue</strong>
+<strong>TEPLÝ BUFET: Tilapie s krémovou kapustou, ryze, zelenina, kuřecí špalíčky,opečený brambor</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: bramborový s vepřovým masem a rajčaty, těstovinový s tuňákem a paprikovym dresinkem, Míchaný</strong>
+<strong>SALÁTY: paprikový kuskus se zeleninou a vepřovým masem, rajčatový s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -140,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s okurkovym relisem s celozrnnou horcici, irsky colcannon {stouchane brambory s mladym zelim, porkem a smetanou}, salatek 155</li><li>Peceny filet z cerstveho norskeho lososa s okurkovym relisem s celozrnnou horcici, irsky colcannon, salatek 179</li><li>Burrito s mexickym veprovym chilli s palivymi paprikami a cervenou cibuli, bylinkovym jogurtovy dip, pecena dyne, salatek {L} 155</li><li>Srnci medailonky se svestkovou omackou, chlupate knedliky, zelny salatek {L} 185</li><li>Opekany tempeh ve sladkokysele omacce s paprikami, zazvorem a cervenou cibuli, jasminova ryze 155</li></ol>
+<ol><li>Madarske halazsle s kousky rybich filetu, paprikami, rajcaty a lzici zakysane smetany, bramborove gnocchi {L} 155</li><li>Peceny filet z cerstve prazmy a candata s citronem a omackou aiolli, pecene brambory, salatek 185</li><li>Medailonky z krutiho stehna s merunkovym catny, birjany z basmati ryze, pecena mlada cervena repa 155</li><li>Burger s trhanou danci pleci pecenou na cervene cibuli, kari mangovy dresink, marinovana cuketa, zrala gouda, pecene brambory, salatek {L] 179</li><li>Indicke jemne korenene cuketove sabzi se sazenym vejcem a amarantem, salatek 155</li></ol>
 </td>
 </tr>
 </table>
