--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.09.2022 09:26:13</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.09.2022 09:47:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -133,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Madarske halazsle s kousky rybich filetu, paprikami, rajcaty a lzici zakysane smetany, bramborove gnocchi {L} 155</li><li>Peceny filet z cerstve prazmy a candata s citronem a omackou aiolli, pecene brambory, salatek 185</li><li>Medailonky z krutiho stehna s merunkovym catny, birjany z basmati ryze, pecena mlada cervena repa 155</li><li>Burger s trhanou danci pleci pecenou na cervene cibuli, kari mangovy dresink, marinovana cuketa, zrala gouda, pecene brambory, salatek {L] 179</li><li>Indicke jemne korenene cuketove sabzi se sazenym vejcem a amarantem, salatek 155</li></ol>
+<ol><li>Madarske halazsle s kousky rybich filetu (hejk, makrela, pstruh), paprikami, rajcaty a lzici zakysane smetany, bramborove gnocchi {L} 155</li><li>Peceny filet z cerstve prazmy a candata s citronem a omackou aiolli, pecene brambory, salatek 185</li><li>Medailonky z krutiho stehna s merunkovym catny, birjany z basmati ryze, pecena mlada cervena repa 155</li><li>Burger s trhanou danci pleci pecenou na cervene cibuli, kari mangovy dresink, marinovana cuketa, zrala gouda, pecene brambory, salatek {L] 179</li><li>Indicke jemne korenene cuketove sabzi se sazenym vejcem a amarantem, salatek 155</li></ol>
 </td>
 </tr>
 </table>
