Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.09.2022 15:29:03</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 08:01:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Čtvrtek, 15. 09. 2022</h5>
+<h5>Pátek, 16. 09. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Tomatová s bylinkovým olejem</strong>
@@ -50,54 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 15.9.2022</div>
+<div class="nadpis">Pátek 16.9.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Závin s jablečno-tvarohovou náplní a ořechy</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Čokoládový puding s quinoou  (bez lepku, bez laktózy) </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Drůbeží kaldoun s krutony v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Drůbeží kaldoun s krutony samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Hovězí na česneku, bramborová kaše, pažitka  <em title="Mléko">7</em></div>
-<div class="cena">169 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, hořčičná omáčka, opečený brambor <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Ragú z hlívy ústřičné, čerstvá majoránka, bylinkový bulgur <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -108,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Květákový krém s uzeným sýrem</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">150g Steak z vepřové pečeně, smetanová houbová omáčka, špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hrachová kaše s plátkem uzeného masa a vepřovou klobásou, volské oko, škvarky s cibulí, kyselá okurka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené rybí filé, vařené brambory s máslem a šnitlíkem, tatarka, citrón</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Restovaná kuřecí játra s kukuřicí, čerstvou paprikou a feferonkou, smažené bramborové plátky</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, květákové pyré s máslem a sýrem, grilované rajče, rukola, vařené vejce</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Sekané vepřové medailonky na tálu, pepřová redukce, mačkané brambory, vídeňská cibulka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná vepřovou panenkou, zeleninou, listy salátu a majonézovým dresinkem, hranolky, mexický dip</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, smažené bramborové plátky</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, hermelín v těstíčku, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">180g Medailonky z mletého masa v bramboráku, salát coleslav</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bratislavská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Zapečené šunkofleky se smetanou a vejci, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený řízek z kuřecích prsou v cornflakes, bramborový salát, citron</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Špíz z vepřové pečeně, papriky, klobásy a cibule na roštu, mačkané brambory s cibulkou, hořčice, beraní roh</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Do růžova pečená vepřová panenka na fazolových luscích s anglickou slaninou, celerové hranolky, zakysaná smetana</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se smetanovou omáčkou, kukuřicí, šunkou a pórkem, 150g filírovaná kuřecí prsa, rukola</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřová omáčce, špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, 150g kuřecí nudličky na grilu, vařené vejce</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilkový pudink s lesním ovocem a šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -122,9 +77,10 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div></div>
+<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script></div></div>
 </td>
 </tr>
 </table>
