--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 08:01:12</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 09:04:08</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 16.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Brownie  (bez lepku) </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čokoládový puding s quinoou  (bez lepku, bez laktózy) </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Dýňový krém v menu  <em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Dýňový krém samostatně <em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Chilli con carne, zakysaná smetana, koriandr, basmati rýže <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Koprová omáčka, vajíčko, grenaillle <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Cassoulet s vepřovou krkovicí a grilovanou klobásou, kořenová zelenina, fazole, tarhoňa, bylinky <em title="Obiloviny obsahující lepek">1</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -88,7 +133,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Madarske halazsle s kousky rybich filetu (hejk, makrela, pstruh), paprikami, rajcaty a lzici zakysane smetany, bramborove gnocchi {L} 155</li><li>Peceny filet z cerstve prazmy a candata s citronem a omackou aiolli, pecene brambory, salatek 185</li><li>Medailonky z krutiho stehna s merunkovym catny, birjany z basmati ryze, pecena mlada cervena repa 155</li><li>Burger s trhanou danci pleci pecenou na cervene cibuli, kari mangovy dresink, marinovana cuketa, zrala gouda, pecene brambory, salatek {L] 179</li><li>Indicke jemne korenene cuketove sabzi se sazenym vejcem a amarantem, salatek 155</li></ol>
+<ol><li>Peceny cerstvy siven s omackou puttanesca {rajcata, olivy, kapary, ancovicky}, zeleninovy bulgur, salatek {L} 155</li><li>Pecena cerstva kambala a filet z lososa s omackou puttanesca, zeleninovy bulgur, salatek {L} 179</li><li>Grilovany veprovy kebab v tanduri marinade {jogurt, citrony, zazvor, garam masala} korenena ryze s beluga cockou, jogurtovy dip, salatek 155</li><li>Smazene rizecky z koroptvich prsicek, lehky bramborovy salat s cerstvymi okurkami, cervenou cibuli a zelenymi bylinkami, citron {L} 179</li><li>Indicka pakora {cizrnove smazenky} s dyni, cuketou, cibulkou a panc phoron, jogurtovy dip, korenena ryze s beluga cockou, salatek 155 </li></ol>
 </td>
 </tr>
 </table>
