--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 09:04:08</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 09:46:04</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pátek, 16. 09. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Tomatová s bylinkovým olejem</strong>
+<strong>Zeleninová s kari</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí roláda se špenátem a vařeným bramborem</strong>
+<strong>Maďarská Vepřová plec s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Zapečená cuketa s mletým masem a balkánským sýrem, bylinkový dip</strong>
+<strong>Palačinky s lesním ovocem a tvarohem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							119,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie s krémovou kapustou, ryze, zelenina, kuřecí špalíčky,opečený brambor</strong>
+<strong>TEPLÝ BUFET: Tilapie se slaninou, kuřecí prsa s liškovou omáčkou, pečený brambor, zelenina, rýže</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: paprikový kuskus se zeleninou a vepřovým masem, rajčatový s vejcem</strong>
+<strong>SALÁTY: kuskus se zeleninou a vepřovým masem s bylinkovym olejem, rajčatový s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
